[metadata]
name = ebi-tools-api
version = attr: ebi_tools_api.__version__
description = Unofficial package to query the EBI Tools REST API
long_description = file: ./README.md
long_description_content_type = text/markdown
license = GNU LGPLv2.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
url = https://github.com/OxfordNuffieldWRH/ebi-tools-api

[options]
packages = find:
install_requires =
    pandas >=1.0
